<resources>
    <string name="app_name">Farmacia</string>

    <!-- CRUD GENERAL -->
    <string name="Ventas">Ventas</string>
    <string name="Compras">Compras</string>
    <string name="Medicamentos">Medicamentos</string>
    <string name="RecetasMedicas">Recetas Médicas</string>

    <!-- Activities y elementos -->
    <string name="MedicamentosMenuActivity">MedicamentosMenuActivity</string>
    <string name="title_activity_medicamentos_menu">MedicamentosMenuActivity</string>
    <string name="title_activity_medicamentos_insertar">MedicamentosInsertarActivity</string>
    <string name="title_activity_medicamentos_consultar">MedicamentosConsultarActivity</string>
    <string name="title_activity_medicamentos_eliminar">MedicamentosEliminarActivity</string>
    <string name="title_activity_medicamentos_actualizar">MedicamentosActualizarActivity</string>

    <!--  Menú de compras  -->
    <string name="txtMenuComp">Menú de compras</string>
    <string name="btnInsertarComp">Insertar compra</string>
    <string name="btnConsultarComp">Consultar compra</string>
    <string name="btnEliminarComp">Eliminar compra</string>
    <string name="btnActualizarComp">Actualizar compra</string>

    <!--  Registro de compra  -->
    <string name="txtInsertarComp">Insertar compra</string>
    <string name="etIdComp">ID Compra</string>
    <string name="txtProv">Proveedor</string>
    <string name="txtArt">Artículo</string>
    <string name="etCantidad">Cantidad</string>
    <string name="btnRegistrarComp">Registrar</string>

    <!--  Consulta de compra  -->
    <string name="txtConsultarComp">Consultar compra</string>
    <string name="btnConsultar">Consultar</string>
    <string name="txtFechaComp">Fecha de compra</string>
    <string name="txtCantidadComp">Cantidad comprada</string>
    <string name="txtPrecioUniComp">Precio unitario articulo</string>
    <string name="txtMontoTotalComp">Monto total</string>

    <!-- Menú de Medicamentos -->
    <string name="medicamentos_menu">Función a Ejecutar el Medicamento</string>
    <string name="insertar_medicamento">Insertar medicamento</string>
    <string name="consultar_medicamento">Consultar medicamento</string>
    <string name="eliminar_medicamento">Eliminar medicamento</string>
    <string name="actualizar_medicamento">Actualizar medicamento</string>

    <!-- Atributos de la tabla artículos -->
    <string name="nombre_articulo">Nombre Artículo</string>
    <string name="precio_unitario_articulo">Precio Unitario</string>
    <string name="stock_articulo">Stock</string>
    <string name="descripcion_articulo">Descripción</string>

    <!-- Atributos de la tabla laboratorio -->
    <string name="nombre_laboratorio">Laboratorio</string>

    <!-- Atributos de la tabla proveedores -->
    <string name="nombre_proveedor">Proveedor</string>
    <string name="telefono_proveedor">Teléfono</string>

    <!-- Atributos de la tabla forma farmacéutica -->
    <string name="tipo_forma_farmaceutica">Forma Farmacéutica</string>

    <!-- Atributos de la tabla vía administración -->
    <string name="tipo_via_administracion">Vía Administración</string>

    <!-- Atributos de la tabla medicamentos -->
    <string name="nombre_medicamento">Medicamento</string>
    <string name="fecha_expi_medicamento">Fecha Expiración</string>
    <string name="fecha_expe_medicamento">Fecha Expedición</string>
    <string name="fecha_expedicion_medicamento">Fecha Expedición</string>
    <string name="fecha_expiracion_medicamento">Fecha Expiración</string>
    <string name="requiere_receta_medica">Receta Médica</string>

    <!-- Botones -->
    <string name="opciones">Opciones</string>
    <string name="eliminar">Eliminar</string>
    <string name="consultar">Consultar</string>
    <string name="insertar">Insertar</string>
    <string name="actualizar">Actualizar</string>
    <string name="limpiar">Limpiar</string>

    <!-- Atributos de las llaves foráneas -->
    <string name="id_proveedor">Proveedor</string>
    <string name="id_medicamento">ID Medicamento</string>
    <string name="medicamento_id">ID Medicamento</string>
    <string name="id_laboratorio">Laboratorio</string>
    <string name="id_forma_farmaceutica">Forma Farmacéutica</string>
    <string name="id_via_administracion">Vía Administración</string>
    <string name="id_articulo">Artículo</string>

    <!-- Recetas Médicas -->
    <string name="InsertarRecetaMedica">Insertar Receta Médica</string>
    <string name="numeroReceta">Número de Receta: </string>
    <string name="editNumeroReceta">Ingresar número de receta</string>
    <string name="fechaReceta">Fecha de Receta</string>
    <string name="fechaExpedicion">Fecha de Expedición</string>
    <string name="detallesMedico">Detalles del Médico</string>
    <string name="nombreMedico">Nombre del Médico: </string>
    <string name="apellidoMedico">Apellido del Médico: </string>
    <string name="especialidadMedico">Especialidad: </string>
    <string name="jvpmMedico">JVPM: </string>
    <string name="detallesReceta">Detalle de la Receta</string>
    <string name="dosisReceta">Dosis: </string>
    <string name="periodicidadReceta">Periodicidad: </string>
    <string name="fechaInicioTratamiento">Fecha de inicio: </string>
    <string name="fechaFinTratamiento">Fecha de Finalización: </string>
    <string name="idRecetaMedica">ID de la Receta: </string>
    <string name="idMedico">ID Médico: </string>
    <string name="idDetalleReceta">ID Detalle Receta: </string>
    <string name="btn_eliminarReceta">Eliminar Receta</string>
    <string name="btnConsultarRecetas">Consultar Receta</string>
    <string name="RecetaMedicas">Receta Médica</string>
    <string name="editarRecetaMedica">Editar Receta Médica</string>
    <string name="actualizarRecetaMedica">Actualizar Datos de la Receta</string>
    <string name="btn_actualizarReceta">Actualizar Receta</string>
    <string name="consultaMedicamentoReceta">Medicamento:</string>

    <!-- Otros -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="stock_label">Stock:</string>
    <string name="precio_unitario_label">Precio Unitario:</string>
    <string name="titulo_vista_articulos">Artículos</string>
    <string name="tipo_articulo">Tipo</string>
    <string name="local_articulo">Local</string>
    <string name="proveedor_articulo">Proveedor:</string>
    <string name="action_edit_articulo">Editar artículo</string>
    <string name="action_delete_articulo">Eliminar Artículo</string>
    <string name="field_error">Campo requerido</string>
    <string name="titulo_menu_articulos">Menú de Artículos</string>
    <string name="boton_consultar_articulo">Consultar Artículo</string>
    <string name="boton_insertar_articulo">Insertar Artículo</string>
    <string name="boton_modificar_articulo">Modificar Artículo</string>
    <string name="boton_eliminar_articulo">Eliminar Artículo</string>
    <string name="insertar_articulo_label">Insertar Artículo</string>
    <string name="tipo_articulo_articulo">Tipo artículo:</string>
    <string name="insertar_un_nuevo_articulo">Insertar un nuevo artículo</string>
    <string name="consultar_articulo">Consultar Artículo</string>
    <string name="mostrar_datos">Mostrar datos</string>
    <string name="eliminar_articulo_title">Eliminar artículo</string>
    <string name="eliminar_articulo">Eliminar artículo</string>
    <string name="modificar_articulo_title">Modificar artículo</string>
    <string name="MenuPrincipal">Menú Farmacia/Librería</string>
    <string name="Articulos">Artículos</string>
    <string name="MenuVenta">Ventas</string>
    <string name="OpcionAgregarVenta">Agregar Venta</string>
    <string name="OpcionActualizarVenta">Actualizar Venta</string>
    <string name="OpcionConsultarVenta">Consultar Venta</string>
    <string name="OpcionEliminarVenta">Eliminar Venta</string>
    <string name="RealizarVenta">Realizar venta</string>
    <string name="MetodoPago">Método de pago:</string>
    <string name="CodigoVenta">Código de venta:</string>
    <string name="CodigoDetalleVenta">Código de detalle de venta:</string>
    <string name="CodigoDetalle">Código del detalle de venta:</string>
    <string name="CodigoV">Código de la venta</string>
    <string name="Articulo">Artículo:</string>
    <string name="Cantidad">Cantidad:</string>
    <string name="CantidadVenta">Cantidad</string>
    <string name="DatosCliente">Datos del Cliente</string>
    <string name="CodigoCliente">Código:</string>
    <string name="Codigo">Código del cliente</string>
    <string name="Nombre">Nombre:</string>
    <string name="Apellido">Apellido:</string>
    <string name="Guardar">Guardar</string>
    <string name="Actualizar">Actualizar</string>
    <string name="Consultar">Consultar</string>
    <string name="Eliminar">Eliminar</string>
    <string name="Limpiar">Limpiar</string>
    <string name="NombreCliente">Nombre del cliente</string>
    <string name="ApellidoCliente">Apellido del cliente</string>
    <string name="consultar_receta_medica">Consultar receta médica</string>
    <string name="modificar_receta_medica">Modificar receta médica</string>
    <string name="eliminar_receta_medica">Eliminar receta médica</string>
    <string name="id_articulo_label">Id articulo</string>
    <string name="eliminar_medicamento_titulo">Eliminar Medicamento</string>
    <string name="requiere_receta_medica_question">¿Requiere receta médica?</string>
</resources>
