<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".ui.compra.ConsultarCompraActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="30dp"
        android:text="@string/btnConsultarComp"
        android:textSize="18sp"
        android:textStyle="bold" />

    <!-- Id de la compra -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_id_compra"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/etIdComp"
            android:inputType="text"
            tools:ignore="TextContrastCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_consultar_compra"
        android:text="@string/Consultar"
        app:cornerRadius="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="30dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <!--  Fecha compra  -->
    <TextView
        android:text="@string/txtFechaComp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tv_fecha_compra"
        android:textSize="15sp"
        android:textStyle="normal"
        android:layout_marginBottom="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <!--  Nombre articulo  -->
    <TextView
        android:text="@string/txtArt"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tv_nombre_articulo"
        android:textSize="15sp"
        android:textStyle="normal"
        android:layout_marginBottom="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <!--  Nombre proveedor  -->
    <TextView
    android:text="@string/txtProv"
    android:textSize="16sp"
    android:textStyle="bold"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tv_nombre_proveedor"
        android:textSize="15sp"
        android:textStyle="normal"
        android:layout_marginBottom="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <!--  Cantidad comprada  -->
    <TextView
        android:text="@string/txtCantidadComp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tv_cantidad_compra"
        android:textSize="15sp"
        android:textStyle="normal"
        android:layout_marginBottom="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <!--  Precio unitario del producto  -->
    <TextView
        android:text="@string/txtPrecioUniComp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tv_precio_unitario"
        android:textSize="15sp"
        android:textStyle="normal"
        android:layout_marginBottom="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <!--  Total compra  -->
    <TextView
        android:text="@string/txtMontoTotalComp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tv_monto_total"
        android:textSize="15sp"
        android:textStyle="normal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</androidx.appcompat.widget.LinearLayoutCompat>